--- a/backend/package.json
+++ b/backend/package.json
@@ -42,8 +42,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "jest-websocket-mock": "^2.5.0",
     "prettier": "^3.3.3",
+    "socket.io-client": "^4.8.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
