--- a/backend/package.json
+++ b/backend/package.json
@@ -68,7 +68,10 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!**/node_modules/**",
+      "!**/dist/**",
+      "!**/test/**"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
